2008-12-10 Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* Cleaned up gtk includes to use only toplevel headers
	Bug #564006

2008-12-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodel.hg: set_value_impl() documentation: Mention 
	row_changed(), not set_row_changed().
	Bug #562505 (Bohumir Zamecnik)

2008-12-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.hg:
	* gtk/src/gtk_vfuncs.defs: Use GType instead of GtkType for the 
	child_type_vfunc() return type, because that seems to have changed in 
	GTK+ and GtkType is deprecated.	Likewise, use GDestroyNotify in other 
	vfuncs instead of GtkDestroyNotify.
	This should allow soure code to use gtkmm if it declares 
	GTK_DISABLE_DEPRECATED.
	Bug #562893 (Dénes Faluvégi)

2008-11-18  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* docs/FAQ/Makefile.am:
	* docs/FAQ/gtkmm-faq.xml:
	* docs/Makefile.am: Remove the FAQ because we moved it to 
	gtkmm-documentation months ago.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Restored the GtkHandleBox::child-attached 
	signal definition and the GtkLinkButton::visited property definition, 
	so these are really put in the API. At some point in 2.14.x we lost 
	these.

2008-11-09  Alexander Shaduri  <ashaduri@gmail.com>

	* gtk/src/cellview.ccg:
	* gtk/src/cellview.hg: Added unset_model().

	* gtk/src/combobox.ccg:
	* gtk/src/combobox.hg: Added unset_model().

	* gtk/src/entrycompletion.ccg:
	* gtk/src/entrycompletion.hg: Added unset_model().

	* gtk/src/iconview.ccg:
	* gtk/src/iconview.hg: Added unset_model().

	* gtk/src/treeview.hg: Marked unset_model() as available since 2.8.

	* gtk/src/gtk_docs_override.xml: Added overrides for
	gtk_tree_view_set_model(), gtk_cell_view_set_model(),
	gtk_entry_completion_set_model(), gtk_entry_completion_set_model()
	and gtk_combo_box_set_model(), because their documentation
	contained an incorrect method of unsetting the models.
	Bug #555268
