@@ -129,6 +129,31 @@ gdk_get_default_root_window()).
 </return>
 </function>
 
+<function name="gdk_window_invalidate_rect">
+<description>
+A convenience wrapper around invalidate_region() which
+invalidates a rectangular region. See invalidate_region() for details.
+See also the invalidate_rect() method overload with no rect parameter, to 
+invalidate the whole region. 
+
+</description>
+<parameters>
+<parameter name="window">
+<parameter_description> a #GdkWindow
+</parameter_description>
+</parameter>
+<parameter name="rect">
+<parameter_description> rectangle to invalidate
+</parameter_description>
+</parameter>
+<parameter name="invalidate_children">
+<parameter_description> whether to also invalidate child windows
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
 <function name="gdk_window_thaw_updates">
 <description>
 Thaws a window frozen with Gdk::Window::freeze_updates().
