@@ -82,5 +82,10 @@ void Window::unset_back_pixmap()
   gdk_window_set_back_pixmap(gobj(), NULL, FALSE);
 }
 
+void Window::invalidate(bool invalidate_children)
+{
+  gdk_window_invalidate_rect(gobj(), NULL, invalidate_children);
+}
+
 } // namespace Gdk
 
