@@ -199,7 +199,14 @@ public:
   _WRAP_METHOD(void register_dnd(), gdk_window_register_dnd)
   _WRAP_METHOD(void begin_resize_drag(WindowEdge  edge, int button, int root_x, int root_y, guint32 timestamp), gdk_window_begin_resize_drag)
   _WRAP_METHOD(void begin_move_drag(int button, int root_x, int root_y, guint32 timestamp), gdk_window_begin_move_drag)
+
   _WRAP_METHOD(void invalidate_rect(const Rectangle& rect, bool invalidate_children), gdk_window_invalidate_rect)
+
+  /** A convenience wrapper around invalidate_region() which
+   * invalidates the whole region. See invalidate_region() for details.
+   * @param invalidate_children Whether to also invalidate child windows.
+   */
+  void invalidate(bool invalidate_children);
 
   _WRAP_METHOD(void invalidate_region(const Region& region, bool invalidate_children = true), gdk_window_invalidate_region)
 
