@@ -1,3 +1,11 @@
+2008-12-22  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/src/gdk_docs_override.xml: Correct the documentation for 
+	gdk_window_invalidate_rect() to remove C-specific text.
+	* gdk/src/window.ccg:
+	* gdk/src/window.hg: Added an invalidate() that takes no rect 
+	parameter because it can be NULL in C.
+
 2008-12-10 Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>
 
 	* Cleaned up gtk includes to use only toplevel headers
